Switches to (manually) using WebP for images (apart from CSS hero image) Uses later version of JQuery 3, without security holes

--- a/index.html
+++ b/index.html
@@ -40,12 +40,48 @@
         <div class="small-section-title">some companies we&#x27;ve helped</div>
       </div>
       <div class="logos-row w-row">
-        <div class="logo-column w-col w-col-2 w-col-small-4 w-col-tiny-4"><img src="images/Time-4.png" alt="" class="client-logo"></div>
-        <div class="logo-column w-col w-col-2 w-col-small-4 w-col-tiny-4"><img src="images/CEW.png" alt="" class="client-logo"></div>
-        <div class="logo-column w-col w-col-2 w-col-small-4 w-col-tiny-4"><img src="images/Interserve.png" alt="" class="client-logo"></div>
-        <div class="logo-column w-col w-col-2 w-col-small-4 w-col-tiny-4"><img src="images/PayZip.png" alt="" class="client-logo"></div>
-        <div class="logo-column w-col w-col-2 w-col-small-4 w-col-tiny-4"><img src="images/SWFA-800px.png" alt="" class="client-logo"></div>
-        <div class="logo-column w-col w-col-2 w-col-small-4 w-col-tiny-4"><img src="images/Applingua.png" alt="" class="client-logo"></div>
+        <div class="logo-column w-col w-col-2 w-col-small-4 w-col-tiny-4">
+            <picture>
+                <source srcset="images/webp/Time-4.webp" type="image/webp" class="client-logo">
+                <source srcset="images/Time-4.png" type="image/jpeg" class="client-logo">
+                <img src="images/Time-4.png" alt="Time 4 Recruitment logo" class="client-logo">
+            </picture>
+        </div>
+        <div class="logo-column w-col w-col-2 w-col-small-4 w-col-tiny-4">
+            <picture>
+                <source srcset="images/webp/CEW.webp" type="image/webp" class="client-logo">
+                <source srcset="images/CEW.png" type="image/jpeg" class="client-logo">
+                <img src="images/CEW.png" alt="CEW logo" class="client-logo">
+            </picture>
+        </div>
+        <div class="logo-column w-col w-col-2 w-col-small-4 w-col-tiny-4">
+            <picture>
+                <source srcset="images/webp/Interserve.webp" type="image/webp" class="client-logo">
+                <source srcset="images/Interserve.png" type="image/jpeg" class="client-logo">
+                <img src="images/Interserve.png" alt="Interserve logo" class="client-logo">
+            </picture>
+        </div>
+        <div class="logo-column w-col w-col-2 w-col-small-4 w-col-tiny-4">
+            <picture>
+                <source srcset="images/webp/PayZip.webp" type="image/webp" class="client-logo">
+                <source srcset="images/PayZip.png" type="image/jpeg" class="client-logo">
+                <img src="images/PayZip.png" alt="PayZip logo" class="client-logo">
+            </picture>
+        </div>
+        <div class="logo-column w-col w-col-2 w-col-small-4 w-col-tiny-4">
+            <picture>
+                <source srcset="images/webp/SWFA-800px.webp" type="image/webp" class="client-logo">
+                <source srcset="images/SWFA-800px.png" type="image/jpeg" class="client-logo">
+                <img src="images/SWFA-800px.png" alt="SWFA logo" class="client-logo">
+            </picture>
+        </div>
+        <div class="logo-column w-col w-col-2 w-col-small-4 w-col-tiny-4">
+            <picture>
+                <source srcset="images/webp/Applingua.webp" type="image/webp" class="client-logo">
+                <source srcset="images/Applingua.png" type="image/jpeg" class="client-logo">
+                <img src="images/Applingua.png" alt="Applingua logo" class="client-logo">
+            </picture>
+        </div>
       </div>
     </div>
   </div>
@@ -188,7 +224,12 @@
     </div>
   </div>
   <div id="intro" class="section feature-section">
-    <div class="container w-container"><img src="images/MacBook-Pro-Webflow.png" alt="" class="browser-mockup-right">
+    <div class="container w-container">
+        <picture>
+            <source srcset="images/webp/MacBook-Pro-Webflow.webp" type="image/webp" class="browser-mockup-right">
+            <source srcset="images/MacBook-Pro-Webflow.png" type="image/jpeg" class="browser-mockup-right">
+            <img src="images/MacBook-Pro-Webflow.png" alt="MacBook Pro image" class="browser-mockup-right">
+        </picture>
       <div class="feature-text-block">
         <div class="feature-intro-title">payzip</div>
         <h2 class="main-feature-title">Payment solutions</h2>
@@ -196,7 +237,12 @@
     </div>
   </div>
   <div class="section feature-section odd">
-    <div class="container w-container"><img src="images/iPad--iPhone-SmartTracker.png" alt="" class="browser-mockup-left">
+    <div class="container w-container">
+        <picture>
+            <source srcset="images/webp/iPad--iPhone-SmartTracker.webp" type="image/webp" class="browser-mockup-left">
+            <source srcset="images/iPad--iPhone-SmartTracker.png" type="image/jpeg" class="browser-mockup-left">
+            <img src="images/iPad--iPhone-SmartTracker.png" alt="SmartTracker app screenshot" class="browser-mockup-left">
+        </picture>
       <div class="feature-text-block right">
         <div class="feature-intro-title">smarttracker</div>
         <h2 class="main-feature-title">Native iOS applications</h2>
@@ -204,7 +250,12 @@
     </div>
   </div>
   <div id="intro" class="section feature-section">
-    <div class="container w-container"><img src="images/Bidstar-MBP--iPhone.png" alt="" class="browser-mockup-right">
+    <div class="container w-container">
+        <picture>
+            <source srcset="images/webp/Bidstar-MBP--iPhone.webp" type="image/webp" class="browser-mockup-right">
+            <source srcset="images/Bidstar-MBP--iPhone.png" type="image/jpeg" class="browser-mockup-right">
+            <img src="images/Bidstar-MBP--iPhone.png" alt="Bidstar app screenshot" class="browser-mockup-right">
+        </picture>
       <div class="feature-text-block">
         <div class="feature-intro-title">bidstar</div>
         <h2 class="main-feature-title">Web applications</h2>
@@ -226,14 +277,27 @@
         <div class="white-footer-column w-col w-col-3"></div>
         <div class="white-footer-column w-col w-col-3"></div>
         <div class="white-footer-column w-col w-col-3">
-          <div class="dark-footer-title">Follow us</div><a href="http://www.facebook.com/PayZip/" target="_blank" class="color-social-button w-inline-block"><img src="images/Icon-facebook.png" alt="" class="footer-small-social-icon"></a><a href="http://www.twitter.com/payzip" target="_blank" class="color-social-button twitter w-inline-block"><img src="images/Icon-twitter.png" alt="" class="footer-small-social-icon"></a></div>
+          <div class="dark-footer-title">Follow us</div><a href="http://www.facebook.com/PayZip/" target="_blank" class="color-social-button w-inline-block">
+            <picture>
+                <source srcset="images/webp/Icon-facebook.webp" type="image/webp" class="footer-small-social-icon">
+                <source srcset="images/Icon-facebook.png" type="image/jpeg" class="footer-small-social-icon">
+                <img src="images/Icon-facebook.png" alt="Facebook icon" class="footer-small-social-icon">
+            </picture>
+            </a><a href="http://www.twitter.com/payzip" target="_blank" class="color-social-button twitter w-inline-block">
+            <picture>
+                <source srcset="images/webp/Icon-twitter.webp" type="image/webp" class="footer-small-social-icon">
+                <source srcset="images/Icon-twitter.png" type="image/jpeg" class="footer-small-social-icon">
+                <img src="images/Icon-twitter.png" alt="Twitter icon" class="footer-small-social-icon">
+            </picture>
+            </a>
+        </div>
       </div>
       <div class="bottom-footer-block white-footer-block w-clearfix">
         <p class="bottom-footer-paragraph dark"><strong data-new-link="true">Copyright © 2019 PayZip Limited<br></strong>Registered in England &amp; Wales no. 07334100</p>
       </div>
     </div>
   </div>
-  <script src="https://d1tdp7z6w94jbb.cloudfront.net/js/jquery-3.3.1.min.js" type="text/javascript" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
   <script src="js/webflow.js" type="text/javascript"></script>
   <!-- [if lte IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif] -->
 </body>
